changed version fields

--- a/0.0.1
+++ b/0.0.1
@@ -1,6 +1,6 @@
 {
-    "currentVersion": 1.1,
-    "previousVersion": 1.2,
+    "currentVersion": 0.0.1,
+    "previousVersion": ,
     "packageUrl": "url to app exchange package",
     "tagList": [
         "New fields",
