--- a/0.0.4
+++ b/0.0.4
@@ -1,6 +1,6 @@
 {
-    "currentVersion": 0.0.4,
-    "previousVersion": 0.0.3,
+    "currentVersion": "0.0.4",
+    "previousVersion": "0.0.3",
     "packageUrl": "url to app exchange package",
     "tagList": [
         "New fields",
@@ -119,7 +119,7 @@
             "taskList": [
                 {
                     "jiraTicket": "ac-1515",
-                    "description": "Add 'Import Leads' permission to AC Basic User Profile",
+                    "description": "Add Import Leads permission to AC Basic User Profile",
                     "actionType": "ProfilePermission",
                     "actionTypeName": "AC Basic User",
                     "optionsMap": {
