updated version by adding quotes around the value

--- a/0.0.1
+++ b/0.0.1
@@ -1,6 +1,6 @@
 {
-    "currentVersion": 0.0.1,
-    "previousVersion": ,
+    "currentVersion": "0.0.1",
+    "previousVersion": "",
     "packageUrl": "url to app exchange package",
     "tagList": [
         "New fields",
