added quotes around version values

--- a/0.0.2
+++ b/0.0.2
@@ -1,6 +1,6 @@
 {
-    "currentVersion": 0.0.2,
-    "previousVersion": 0.0.1,
+    "currentVersion": "0.0.2",
+    "previousVersion": "0.0.1",
     "packageUrl": "url to app exchange package",
     "tagList": [
         "New fields",
