added quotes around version values

--- a/0.0.3
+++ b/0.0.3
@@ -1,6 +1,6 @@
 {
-    "currentVersion": 0.0.3,
-    "previousVersion": 0.0.2,
+    "currentVersion": "0.0.3",
+    "previousVersion": "0.0.2",
     "packageUrl": "url to app exchange package",
     "tagList": [
         "New fields",
