--- a/0.0.3
+++ b/0.0.3
@@ -120,7 +120,7 @@
             "taskList": [
                 {
                     "jiraTicket": "ac-107",
-                    "description": "Add 'Import Leads' permission to AC Basic User Profile",
+                    "description": "Add Import Leads permission to AC Basic User Profile",
                     "actionType": "ProfilePermission",
                     "actionTypeName": "AC Basic User",
                     "optionsMap": {
