--- a/0.0.5
+++ b/0.0.5
@@ -24,11 +24,7 @@
                     "actionType": "RelatedList",
                     "actionTypeName": "command__Gift__c.command__Contact__c",
                     "optionsMap": {
-                        "fieldHeaders": [
-                            "NAME",
-                            "command__Gift_Cost__c",
-                            "command__Date_Sent__c"
-                        ],
+                        "fieldHeaders": "NAME, command__Gift_Cost__c, command__Date_Sent__c",
                         "buttons": null,
                         "sortField": null,
                         "sortOrder": null
