--- a/0.0.2
+++ b/0.0.2
@@ -12,7 +12,7 @@
 
                     "profileName" : "AC Basic User",
                     "profileUserPermissionMap" : {
-                        "ViewSetup" : false
+                        "ViewSetup" : true
 
                     }
                 }
