--- a/0.0.4
+++ b/0.0.4
@@ -3,7 +3,7 @@
     "instructionList": [
         {
             "sObjectName": "PersonAccount",
-            "instructionTypeName": "Client",
+            "instructionTypeName": "command__Client",
             "taskList": [
                 {
                     "jiraTicket": "ac-262",
