--- a/0.0.1
+++ b/0.0.1
@@ -3,7 +3,7 @@
     "instructionList": [
         {
             "sObjectName": "PersonAccount",
-            "instructionTypeName": "Client",
+            "instructionTypeName": "command_Client",
             "taskList": [
                 {
                     "jiraTicket": "ac-261",
