--- a/0.0.3
+++ b/0.0.3
@@ -1,5 +1,5 @@
 {
-    "version": "0.0.3,
+    "version": "0.0.3",
     "instructionList": [
         {
             "description": "Profile Modifications",
