--- a/0.0.4
+++ b/0.0.4
@@ -14,7 +14,7 @@
                             "jiraTicket": "ac-107",
                             "description": "Add 'Import Leads' permission to AC Basic User Profile",
                             "optionsMap": {
-                                "ImportLeads": false
+                                "ImportLeads": true
                             }
                         }
                     ]
