changed Household field to Editable

--- a/0.0.1
+++ b/0.0.1
@@ -125,7 +125,7 @@
         {
             "sObjectName": "FinServ__FinancialAccount__c",
             "instructionTypeName": "command__Financial Account(AUM) Layout",
-            "description": "Add Account value below Stat Signed on AUM Fin Account Layout",
+            "description": "Add Account value below State Signed on AUM Fin Account Layout",
             "taskList": [
                 {
                     "jiraTicket": "ac-656",
@@ -173,7 +173,7 @@
                         "reference": "FinServ__ProductName__c",
                         "section": "Basic Info",
                         "column": 1,
-                        "behavior": "Readonly"
+                        "behavior": "Edit"
                     }
                 }
             ]
@@ -192,7 +192,7 @@
                         "reference": "FinServ__ProductName__c",
                         "section": "Basic Info",
                         "column": 1,
-                        "behavior": "Readonly"
+                        "behavior": "Edit"
                     }
                 }
             ]
@@ -211,7 +211,7 @@
                         "reference": "command__Model__c",
                         "section": "Basic Information",
                         "column": 1,
-                        "behavior": "Readonly"
+                        "behavior": "Edit"
                     }
                 }
             ]
@@ -230,7 +230,7 @@
                         "reference": "FinServ__ProductName__c",
                         "section": "Information",
                         "column": 1,
-                        "behavior": "Readonly"
+                        "behavior": "Edit"
                     }
                 }
             ]
