--- a/0.0.4
+++ b/0.0.4
@@ -10,8 +10,8 @@
                     "actionType": "Field",
                     "subTaskList": [
                         {
-                            "actionType" = "LayoutSection",
-                            "actionTypeName" = "AE Data",
+                            "actionType": "LayoutSection",
+                            "actionTypeName": "AE Data",
                             "location": {
                                 "reference": "Basic Info"
                             },
