--- a/0.0.1
+++ b/0.0.1
@@ -244,7 +244,10 @@
                     "jiraTicket": "ac-656",
                     "description": "Add files related List",
                     "actionType": "RelatedList",
-                    "actionTypeName": "RelatedFileList"
+                    "actionTypeName": "RelatedFileList",
+                    "optionsMap": {
+                        "action": "add"
+                    }
                 }
             ]
         }
