--- a/0.0.1
+++ b/0.0.1
@@ -248,6 +248,10 @@
                     "optionsMap": {
                         "action": "add"
                     }
+                    "location": {
+                        "position": "Below",
+                        "reference": "RelatedContentNoteList",
+                    }
                 }
             ]
         }
