--- a/0.0.1
+++ b/0.0.1
@@ -250,7 +250,7 @@
                     },
                     "location": {
                         "position": "Below",
-                        "reference": "RelatedContentNoteList",
+                        "reference": "RelatedContentNoteList"
                     }
                 }
             ]
