--- a/0.0.4
+++ b/0.0.4
@@ -2,6 +2,79 @@
     "instructionList": [
         {
             "sObjectName": "FinServ__FinancialAccount__c",
+            "instructionTypeName": "command__Financial Account (Life) Layout",
+            "taskList": [
+                {
+                    "jiraTicket": "MISC-1340",
+                    "description": "Add new fields to Fin Account Life Layout",
+                    "actionType": "Field",
+                    "subTaskList": [
+                        {
+                            "actionTypeName": "command__Mode__c",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__Dump_In_Lump_Sum__c",
+                                "section": "Information",
+                                "column": 0,
+                                "behavior": "Edit"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__X1035_Exchange__c",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__Modal_Premium__c",
+                                "section": "Information",
+                                "column": 1,
+                                "behavior": "Edit"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__Tobacco__c",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__Mode__c",
+                                "section": "Information",
+                                "column": 0,
+                                "behavior": "Edit"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__Class__c",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__X1035_Exchange__c",
+                                "section": "Information",
+                                "column": 1,
+                                "behavior": "Edit"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__Signed_Date__c",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__Review_Date__c",
+                                "section": "Dates",
+                                "column": 0,
+                                "behavior": "Edit"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__AE_Received_Date__c",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__Closed_Date__c",
+                                "section": "Dates",
+                                "column": 1,
+                                "behavior": "Edit"
+                            }
+                        }
+                    ]
+                }
+            ]
+        },
+        {
+            "sObjectName": "FinServ__FinancialAccount__c",
             "instructionTypeName": "command__Financial Account (Annuity) Layout",
             "taskList": [
                 {
